modified npmrc file

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 shamefully-hoist=true
 ignore-workspace-root-check=true
 
-@rapidlaunch-it:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+@rapidlaunch-it:registry=https://npm.pkg.github.com/
