--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
 	"version": 2,
-    "installCommand": "pnpm install",
-    "builds": [
-		{
-            "use": "@nuxt/vercel",
-			"config": {
-				"functions": {
-					"prebuild": "prisma generate"
-				}
-			}
-		}
-	]
+    "installCommand": "pnpm install"
 }
